--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "다양한 방식으로 푸시서버를 구현해봅니다.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "spoll": "node short-polling/index.js"
+    "start": "babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/3jin/push-server-lab/issues"
   },
-  "homepage": "https://github.com/3jin/push-server-lab#readme"
+  "homepage": "https://github.com/3jin/push-server-lab#readme",
+  "dependencies": {
+    "koa": "^2.6.2",
+    "koa-ejs": "^4.1.2",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.7.0"
+  }
 }
